# wordchipper

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  STYLE_GUIDE.md  book.toml  codecov.yml  format.sh  rustfmt.toml
bindings/python/: Cargo.toml  README.md  hf_to_tiktoken.py  pyproject.toml
bindings/python/benchmarks/: conftest.py  test_bench_decode.py  test_bench_encode.py  test_bench_qwen35.py
bindings/python/py_src/wordchipper/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/src/tokenizer/: mod.rs  py_tokenizer.rs  py_tokenizer_options.rs  tokenizer_options.rs
bindings/python/src/vocab/: mod.rs  py_special_filter.rs  py_vocab.rs  special_filter.rs
bindings/python/tests/: test_compat.py  test_custom_loader.py  test_wordchipper.py
bindings/python/tests/compat/: test_tiktoken.py  test_tokenizers.py
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/js/: package-lock.json  package.json
bindings/wasm/js/src/: index.ts  models.ts
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: tokenizer.rs
crates/wchipper/: Cargo.toml  README.md  USAGE.md
crates/wchipper/src/: main.rs
crates/wchipper/src/commands/: list_models.rs  mod.rs  train_cmd.rs
crates/wchipper/src/commands/models/: mod.rs
crates/wchipper/src/util/: input_batcher.rs  lexer_inventory.rs  lexer_selector.rs  mod.rs
crates/wordchipper/: Cargo.toml  README.md
crates/wordchipper-cli/: Cargo.toml  README.md
crates/wordchipper-cli/src/: cat_command.rs  common.rs  input_output.rs  list_models_command.rs  main.rs
crates/wordchipper-cli/src/commands/: cat.rs  mod.rs  train.rs
crates/wordchipper-data/: Cargo.toml
crates/wordchipper-data/examples/pull_shards/: Cargo.toml
crates/wordchipper-data/src/: dataset.rs  lib.rs
crates/wordchipper-disk-cache/: Cargo.toml  README.md
crates/wordchipper-disk-cache/src/: disk_cache.rs  lib.rs  path_resolver.rs  path_utils.rs
crates/wordchipper-experimental/: Cargo.toml
crates/wordchipper-experimental/src/concurrency/: lru_pool_toy.rs
crates/wordchipper-pub/: Cargo.toml
crates/wordchipper-pub/src/: lib.rs
crates/wordchipper-regex/: Cargo.toml
crates/wordchipper-regex/src/: alternate_choice.rs  lib.rs  regex_wrapper.rs
crates/wordchipper-training/: Cargo.toml  README.md
crates/wordchipper-training/examples/training-demo/: Cargo.toml
crates/wordchipper-training/src/: bpe_trainer.rs  lib.rs  training_types.rs
crates/wordchipper-training/src/utility/: mod.rs  pair_span_index.rs  text_span_counter.rs  token_span_buffer.rs
crates/wordchipper/benches/: decoding.rs  encoding.rs  spanning.rs  tokenizer.rs
crates/wordchipper/benches/data/: english.txt
crates/wordchipper/examples/token-cli/: Cargo.toml
crates/wordchipper/examples/tokenizer_trainer/: Cargo.toml
crates/wordchipper/src/: errors.rs  lib.rs  tokenizer.rs  types.rs
crates/wordchipper/src/compat/: mod.rs  slices.rs  strings.rs  threads.rs  timers.rs  traits.rs
crates/wordchipper/src/concurrency/: lru_pool_toy.rs  mod.rs  pool_toy.rs  threads.rs
crates/wordchipper/src/decoders/: decode_context.rs  decode_results.rs  decoder_builder.rs  decoder_options.rs  dictionary_decoder.rs  mod.rs  slab_index_decoder.rs  token_decoder.rs  token_dict_decoder.rs
crates/wordchipper/src/encoders/: encoder_builder.rs  encoder_options.rs  merge_heap_encoder.rs  merge_scan_encoder.rs  mod.rs  span_encoder.rs  test_utils.rs  testing.rs  token_encoder.rs
crates/wordchipper/src/pretrained/: load_by_name.rs  mod.rs  vocab_factory.rs
crates/wordchipper/src/rayon/: mod.rs  rayon_decoder.rs  rayon_encoder.rs
crates/wordchipper/src/regex/: alt_choice.rs  exact_match_union.rs  mod.rs  regex_pattern.rs  regex_pool.rs  regex_supplier.rs  regex_wrapper.rs
crates/wordchipper/src/resources/: mod.rs  resource_loader.rs
crates/wordchipper/src/segmentation/: mod.rs  segmentation_config.rs  text_segmentor.rs
crates/wordchipper/src/spanner/: mod.rs  spanner_config.rs  spanning_config.rs  text_spanner.rs
crates/wordchipper/src/spanners/: mod.rs  spanner_builder.rs  spanning_config.rs  text_spanner.rs
crates/wordchipper/src/spanning/: lexer_spanner.rs  logos_lexer.rs  logos_text_spanner.rs  mod.rs  regex_text_spanner.rs  span_lexer.rs  span_scanner.rs  span_scanner_spanner.rs  spanner_builder.rs  spanning_config.rs  text_spanner.rs
crates/wordchipper/src/support/: mod.rs  strings.rs
crates/wordchipper/src/tokenizer/: mod.rs  tokenizer_impl.rs  tokenizer_options.rs
crates/wordchipper/src/training/: bpe_trainer.rs  mod.rs  pair_span_index.rs  text_span_counter.rs  token_span_buffer.rs  training_types.rs
crates/wordchipper/src/utility/: mod.rs  ranges.rs  slices.rs  timers.rs
crates/wordchipper/src/vocab/: byte_vocab.rs  mod.rs  pair_vocab.rs  size_hints.rs  span_vocab.rs  special_filter.rs  special_vocab.rs  token_vocab.rs  unified_vocab.rs  vocab_types.rs
crates/wordchipper/tests/: profiling_multilingual.rs  validation.rs
dev-crates/wordchipper-bench/: Cargo.toml  par_batch.sh
dev-crates/wordchipper-bench/benches/: decoding_single.rs  encoder_criterion.rs  encoding_parallel.rs  encoding_single.rs  spanning.rs
dev-crates/wordchipper-bench/src/: divan_parser.rs  lib.rs
examples/pull_shards/: Cargo.toml  README.md
examples/pull_shards/src/: main.rs
examples/sample-timer/: Cargo.toml  README.md
examples/sample-timer/src/: engines.rs  main.rs  tiktoken_support.rs  tokenizers_support.rs  wordchipper_support.rs
examples/token-cli/: Cargo.toml  README.md
examples/token-cli/src/: main.rs  tokenizer_timer.rs
examples/tokenizer_trainer/: Cargo.toml
examples/tokenizer_trainer/src/: main.rs
local_crates/build-graphs/: Cargo.toml
local_crates/build-graphs/src/: main.rs
local_crates/tokenizer_trainer/: Cargo.toml  README.md
local_crates/tokenizer_trainer/src/: main.rs
local_crates/wordchipper-bench/: Cargo.toml  README.md
local_crates/wordchipper-bench/benches/: crit.rs  encoding_parallel.rs  encoding_single.rs  spanning.rs
local_crates/wordchipper-bench/src/: divan_parser.rs  lib.rs
(+256 files in other folders)
