[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
version = "0.2.2"
repository = "https://github.com/crutcher/wordchipper"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "deny"


[workspace.dependencies]
ahash = "^0.8"
arrow = "^57.1"
base64 = "^0.22"
bimm-contracts = "^0.19.2"
burn = "^0.20.0"
clap = "^4.5"
compact_str = "^0.9"
dary_heap = "^0.3"
directories-next = "^2.0"
downloader = "^0.2"
edit-distance = "^2.2"
hashbrown = "^0.16"
hashlru = "^0.11.1"
humansize = "^2.1"
parking_lot = "^0.12"
parquet = "^57.1"
rayon = "^1.11"
serde = "^1.0"
serial_test = "^3.3"
shellexpand = "^3.1"
similar = "^2.7.0"
stackvec = "^0.2.1"
strum = "^0.27"
strum_macros = "^0.27"
tempdir = "^0.3"
tiktoken-rs = "^0.9.1"

document-features = "^0.2"

anyhow = { version = "^1.0", default-features = false }
log = { version = "^0.4", default-features = false }
num-traits = { version = "^0.2.19", default-features = false }
tracing = { version = "^0.1", default-features = false }

# ATTENTION:
# Upgrading the regex deps comes with significant performance penalties
# for concurrent encoding. Something about the multi-thread contention,
# even with cloned regex instances, has gotten worse.
fancy-regex = { version = "0.13.0", default-features = false }
regex = { version = "1.10.3", default-features = false }

