[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "examples/*",
    "bindings/python",
]

[workspace.package]
version = "0.7.3"
repository = "https://github.com/crutcher/wordchipper"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"
authors = [
    "Crutcher Dunnavant <crutcher@gmail.com>",
]


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "deny"


[workspace.dependencies]
ahash = "0.8.10"
foldhash = "0.2.0"
arrow = "57.2"
base64 = "0.22.1"
cfg-if = "1.0.4"
clap = "4.5.58"
compact_str = "0.9.0"
dary_heap = "0.3.5"
directories-next = "2.0.0"
document-features = "0.2.10"
downloader = "0.2.7"
hashbrown = "0.16.0"
hashlru = "0.11.1"
humansize = "2.1.1"
indicatif = "0.18.1"
once_cell = "1.21.3"
parking_lot = "0.12.4"
parquet = "57.2.0"
range-parser = "0.1.1"
rayon = "1.11"
serde = "1.0.220"
serial_test = "3.3.0"
shellexpand = "3.1.0"
similar = "2.7.0"
stackvec = "0.2.1"
strum = "0.27.0"
strum_macros = "0.27.0"
tempdir = "0.3.5"
tiktoken-rs = "0.9.1"
tokenizers = "0.22.0"
rand = "0.9.2"

thiserror = { version = "^2.0", default-features = false }
pyo3 = { version = "^0.24", features = ["extension-module"] }
log = { version = "0.4.20", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
regex = { version = "1.12.3", default-features = false }
tracing = { version = "0.1.40", default-features = false }

# ATTENTION:
# Upgrading the regex deps comes with significant performance penalties
# for concurrent encoding. Something about the multi-thread contention,
# even with cloned regex instances, has gotten worse.
fancy-regex = { version = "0.13.0", default-features = false }

