[package]
name = "wordchipper-python"
description = "Python bindings for the wordchipper tokenizer library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false


[lints]
workspace = true


[lib]
name = "_wordchipper"
crate-type = ["cdylib", "rlib"]


[features]
default = []
python-extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { workspace = true }
wordchipper = { path = "../../crates/wordchipper", features = ["datagym", "rustls-tls"] }

[dev-dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }