[package]
name = "wchipper"
description = "A command-line interface for the Wordchipper tokenizer library."
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
wordchipper = { version = "0.8.0", path = "../wordchipper", features = ["client"] }
wordchipper-training = { version = "0.8.0", path = "../wordchipper-training" }
stderrlog = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }

arrow = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
