[package]
name = "wordchipper-cli"
description = "A command-line interface for the Wordchipper tokenizer library."
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
wordchipper = { version = "0.7.3", path = "../../crates/wordchipper", features = ["default"] }
clap = { workspace = true, features = ["derive"] }

