[package]
name = "wordchipper-data"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
burn = { workspace = true }
anyhow = { workspace = true }
shellexpand = { workspace = true }

parquet = { workspace = true, features = ["arrow"] }

# features=["tui"} incompatible with conflicting indicatif versions.
downloader = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
