[package]
name = "wordchipper-data"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
downloader = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
shellexpand = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
