[package]
name = "wordchipper-data"
authors.workspace = true
license.workspace = true
repository.workspace = true

publish = false

rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
downloader = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
shellexpand = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
