[package]
name = "wordchipper-disk-cache"
description = "A disk cache for Wordchipper downloads"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true


[lints]
workspace = true


[dependencies]
anyhow = { workspace = true }
directories-next = { workspace = true }

# features=["tui"} incompatible with conflicting indicatif versions.
downloader = { workspace = true }


[dev-dependencies]
serial_test = { workspace = true }
