[package]
name = "wordchipper-experimental"
description = "Experimental features for wordchipper."
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

publish = false

[dependencies]
wordchipper = { version = "0.6.0", path = "../wordchipper", features = ["std"] }
parking_lot = { workspace = true }
hashlru = { workspace = true }

[lints]
workspace = true
