[package]
name = "wordchipper-experimental"
description = "Experimental features for wordchipper."
authors.workspace = true
license.workspace = true
repository.workspace = true

publish = false

edition.workspace = true
rust-version.workspace = true

[dependencies]
wordchipper = { version = "0.7.2", path = "../wordchipper", features = ["std"] }
parking_lot = { workspace = true }
hashlru = { workspace = true }

[lints]
workspace = true
