[package]
name = "wordchipper-pub"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true


[lints]
workspace = true

[features]
default = [
    "wordchipper/default"
]

## The default client is focused on loading vocabularies and running
## high performance encoders / decoders.
client = [
    "wordchipper/client"
]

## The download feature enables downloading vocabularies from the internet.
download = [
    "wordchipper/download"
]

## The training feature enables the training code.
training = [
    "dep:wordchipper-training",
]


## The "std" feature enables the use of the `std` library;
## and the "`no_std`" feature enables deps needed when "std" is not enabled.
## (Negative feature deps are not stable yet.)
##
## Note: I am unsure if this is complete. It is tested CI, but I'm unsure
## if I've fully covered it; and I haven't worked out a ``no_std`` deploy test yet.
std = [
    "wordchipper/std",
]
## See [std].
no_std = [
    "wordchipper/no_std",
]

## This swaps all HashMap/HashSet implementations for ``ahash``; which is a performance
## win on many/(most?) modern CPUs.
##
## This is done by the ``types::hash_types::CommonHash{*}`` type alias machinery.
## See also the ``hashbrown`` dep used by ``no_std``.
ahash = [
    "wordchipper/ahash"
]

## This enables some parallelism wrappers using the ``rayon`` crate.
##
## TODO: I intend on providing a ``tokio`` based ``async`` parallelism mechanism
## as well, to structure more direct ``regex find > encode span`` pipeline parallelism.
rayon = [
    "wordchipper/rayon",
]

## This enables a number of ``tracing`` instrumentation points.
## This is only useful for timing tracing of the library itself.
tracing = [
    "wordchipper/tracing",
]

## Enable test-utitilies for downstream users.
testing = [
    "wordchipper/testing",
]


[dependencies]
wordchipper = { version = "0.4.0", path = "../wordchipper" }
wordchipper-training = { version = "0.4.0", path = "../wordchipper-training", optional = true }
document-features = { workspace = true }
compact_str = { workspace = true, optional = true }
dary_heap = { workspace = true, optional = true }

