[package]
name = "wordchipper-regex"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
std = [
    "fancy-regex/default",
    "regex/default",
]


[dependencies]
## no-default features.
fancy-regex = { workspace = true, features = ["unicode"] }
regex = { workspace = true, features = ["unicode"] }

