[package]
name = "wordchipper-training"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
tracing = ["tracing/attributes"]

[dependencies]
wordchipper = { version = "0.4.0", path = "../wordchipper" }
anyhow = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }

# "tracing" feature deps:
tracing = { workspace = true, optional = true }

# "training" feature deps:
compact_str = { workspace = true }
dary_heap = { workspace = true }

[dev-dependencies]
compact_str = { workspace = true }
tempdir = { workspace = true }
serial_test = { workspace = true }
