[package]
name = "wordchipper-bench"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wordchipper = { path = "../../crates/wordchipper", features = ["default"] }
wordchipper-data = { path = "../wordchipper-data" }

arrow = { workspace = true }
bpe-openai = { workspace = true }
criterion = { workspace = true }
clap = { workspace = true, features = ["derive"] }
divan = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiktoken-rs = { workspace = true }
tokenizers = { workspace = true, features = ["http"] }

[[bin]]
name = "bench-json"
path = "src/bin/bench_json.rs"

[[bench]]
name = "spanning"
harness = false

[[bench]]
name = "encoder_criterion"
harness = false

[[bench]]
name = "encoding_single"
harness = false

[[bench]]
name = "encoding_parallel"
harness = false

[[bench]]
name = "decoding_single"
harness = false
