[package]
name = "sample-timer"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[features]
default = [
    "rayon",
    "tokenizers",
]
rayon = [
    "wordchipper/rayon",
    "dep:tokenizers",
    "dep:rayon",
]
tokenizers = [
    "dep:tokenizers",
    "rayon",
]

[dependencies]
wordchipper-data = { path = "../../crates/wordchipper-data" }
wordchipper = { path = "../../crates/wordchipper", features = ["default"] }

arrow = { workspace = true }
cfg-if = { workspace = true }
clap = { workspace = true, features = ["derive"] }
humansize = { workspace = true }
indicatif = { workspace = true }
similar = { workspace = true }
rand = { workspace = true }

tiktoken-rs = { workspace = true }
tokenizers = { workspace = true, features = ["http"], optional = true }

rayon = { workspace = true, optional = true }
