[package]
name = "token-cli"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wordchipper-data = { path = "../../crates/wordchipper-data" }
wordchipper = { path = "../../crates/wordchipper" }

anyhow = { workspace = true }
strum = { workspace = true }
arrow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
humansize = { workspace = true }
rayon = { workspace = true }
similar = { workspace = true }
tiktoken-rs = { workspace = true }
once_cell = "1.21.3"
