[package]
name = "tokenizer_trainer"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wordchipper-data = { path = "../../crates/wordchipper-data" }
wordchipper = { path = "../../crates/wordchipper", features = ["training"] }

anyhow = { workspace = true }
arrow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
similar = { workspace = true }
