[package]
name = "tokenizer_trainer"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wordchipper-data = { path = "../wordchipper-data" }
wordchipper = { path = "../../crates/wordchipper" }
wordchipper-training = { path = "../../crates/wordchipper-training" }

arrow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
similar = { workspace = true }
