[package]
name = "training-demo"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wordchipper-data = { path = "../../../../dev-crates/wordchipper-data" }
wordchipper = { path = "../../../wordchipper" }
wordchipper-training = { path = "../.." }

arrow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
similar = { workspace = true }
